Fix: issue with the celebration effect not showing when user win

--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -701,6 +701,7 @@ li {
   margin: 0 60px;
 }
 .btn-pullup button {
+  cursor: pointer;
   background-image: linear-gradient(
     to right,
     rgb(62, 130, 5) 0%,
